--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       WORDPRESS_DB_NAME: wordpress_db
     volumes:
         - "./wordpress:/var/www/html"
+        - "./themes:/var/www/html/themes"
 
     db:
         container_name: 'local-wordpress-db'
