--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,21 @@
 version: '3.3'
 services:
 
+  db:
+    container_name: 'local-wp-db'
+    image: 'mysql:5.7'
+    volumes:
+      - db_data:/var/lib/mysql
+    ports:
+        - '18766:3306'
+    environment:
+        MYSQL_ROOT_PASSWORD: somewordpress
+        MYSQL_DATABASE: wordpress_db
+        MYSQL_USER: wordpress_user
+        MYSQL_PASSWORD: wordpress_password
+
   wordpress:
-    container_name: 'local-wordpress'
+    container_name: 'local-wp'
     depends_on:
       - db
     image: 'wordpress:latest'
@@ -15,23 +28,35 @@ services:
       WORDPRESS_DB_PASSWORD: wordpress_password
       WORDPRESS_DB_NAME: wordpress_db
     volumes:
-        - "./wordpress:/var/www/html"
-        - "./themes:/var/www/html/themes"
+      - wp_data:/var/www/html
+      - "./themes:/var/www/html/themes"
 
-    db:
-        container_name: 'local-wordpress-db'
-        image: 'mysql:5.7'
-        volumes:
-            - './data/mysql:/var/lib/mysql'
-        ports:
-            - '18766:3306'
-        environment:
-            MYSQL_ROOT_PASSWORD: somewordpress
-            MYSQL_DATABASE: wordpress_db
-            MYSQL_USER: wordpress_user
-            MYSQL_PASSWORD: wordpress_password
+  wordpress-cli:
+    container_name: 'local-wp-cli'
+    depends_on:
+      - db
+      - wordpress
+    image: wordpress:cli
+    # Run wordpress-cli with the same user-id as wordpress.
+    # This way there are no permission problems
+    # when running the cli
+    user: xfs
+    # The sleep 10 is required so that the command is run after
+    # mysql is initialized. Depending on your machine this might take
+    # longer or it can go faster.
+    command: >
+      /bin/sh -c '
+      sleep 10;
+      wp core install --path="/var/www/html" --url="http://localhost:8000" --title="Local Wordpress By Docker" --admin_user=admin --admin_password=secret --admin_email=foo@bar.com
+      '
+    environment:
+      WORDPRESS_DB_HOST: 'db:3306'
+      WORDPRESS_DB_USER: wordpress_user
+      WORDPRESS_DB_PASSWORD: wordpress_password
+      WORDPRESS_DB_NAME: wordpress_db
+    volumes:
+      - wp_data:/var/www/html
 
-    cli:
-        image: wordpress:cli
-        volumes:
-            - ./wordpress:/var/www/html/
+volumes:
+  db_data:
+  wp_data:
