--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,7 @@ services:
       '
     volumes:
       - wp_data:/var/www/html
+      - "./themes:/var/www/html/wp-content/themes"
 
 volumes:
   db_data:
