--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 services:
 
   db:
-    container_name: 'local-wp-db'
+    container_name: 'local-omc-wp-db'
     image: 'mysql:5.7'
     volumes:
       - db_data:/var/lib/mysql
@@ -15,7 +15,7 @@ services:
         MYSQL_PASSWORD: wordpress_password
 
   wordpress:
-    container_name: 'local-wp'
+    container_name: 'local-omc-wp'
     depends_on:
       - db
     image: 'wordpress:latest'
@@ -32,7 +32,7 @@ services:
       - "./themes:/var/www/html/wp-content/themes"
 
   wordpress-cli:
-    container_name: 'local-wp-cli'
+    container_name: 'local-omc-wp-cli'
     depends_on:
       - db
       - wordpress
